# cpp-projects

./: README.md
DeepMiner/: CMakeLists.txt  DeepMiner.drawio  main.cpp
DeepMiner/inc/: Computer.h  Game.h  Miner.h  Player.h  Robot.h  World.h
DeepMiner/src/: Computer.cpp  Game.cpp  Player.cpp  Robot.cpp  World.cpp
Flottenkampf/: .$Flottenkampf.drawio.bkp  CMakeLists.txt  Flottenkampf.drawio  main.cpp
Flottenkampf/Jaeger/: Jaeger.cpp  (+1 more)
Oasencrawler/: CMakeLists.txt  main.cpp
algos-tree/: ALGOS-Übung 2.docx  README.md  treecheck.cpp
deepm/: CMakeLists.txt  main.cpp
hashTable/: CMakeLists.txt  README.md  aktie.h  aktie_krzl.h  day.h  hashTable.cpp  hashTable.h  main.cpp
myfind/: .gitignore  CMakeLists.txt  Makefile  Protokoll.docx  fork_test.cpp  main.cpp  search.cpp  search.h
tw-mailer/: .gitignore  CMakeLists.txt  Makefile  Protokol.md
tw-mailer/.history/: Protocol_20241023163648.md  Protocol_20241127211408.md  Protokol_20241127210944.md  Protokol_20241127211739.md  Protokol_20241127212059.md
tw-mailer/client/: client.cpp  client_handler.cpp  client_handler.hpp  client_socket.cpp  client_socket.hpp
tw-mailer/example_code/: .gitignore  Makefile  client_old.cpp  myclient.c  myserver.c
tw-mailer/example_code/ldap-sample-main/: .gitignore  Makefile  README.md  ldapsearch.sh  myldap.c  mypw.c  tooling.md
tw-mailer/example_code/more/: myclient.c  myserver.c
tw-mailer/server/: Mail.hpp  authService.cpp  authService.hpp  mailHandler.cpp  mailHandler.hpp  server.cpp  server_handler.cpp  server_handler.hpp  server_socket.cpp  server_socket.hpp
(+35 files in other folders)
